xml/tests/testData/commentInjection/injected1.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html
    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
<head>
  <title>title</title>
  <!--[if IE]>
  <link rel="stylesheet" <error descr="Attribute typ is not allowed here">typ</error><error descr="'=' expected"> </error><error descr="Attribute e is not allowed here">e</error>="text/css" href="<warning descr="Cannot resolve file '1.css'"><error descr="Cannot resolve file '1.css'">1.css</error></warning>"/>
  <link rel="stylesheet" type="text/css" href="<warning descr="Cannot resolve file '2.css'"><error descr="Cannot resolve file '2.css'">2.css</error></warning>"/>
  <![endif]-->
</head>
<body>

</body>
</html>
